Backend: Support filtering config by steam user
